--- a/bundles/core/pom.xml
+++ b/bundles/core/pom.xml
@@ -91,7 +91,7 @@
         <profile>
             <id>runCodeCoverageCheck</id>
             <activation>
-                <activeByDefault>true</activeByDefault>
+                <activeByDefault>false</activeByDefault>
             </activation>
             <build>
                 <plugins>
@@ -165,6 +165,7 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
                         <configuration>
+                            <skipTests>true</skipTests>
                             <systemPropertyVariables>
                                 <jacoco-agent.destfile>${jacoco.data.file}</jacoco-agent.destfile>
                             </systemPropertyVariables>
